--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 
 # H2
-spring.datasource.url=jdbc:h2:file:C:/temp/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:file:C:/temp/test
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
  
 # MySQL
 #spring.datasource.url=jdbc:mysql://localhost:3306/test
@@ -24,8 +24,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
  
 # SQL Server
-#spring.datasource.url=jdbc:sqlserver://DBVEP42368:1433;databaseName=QLTY_RPT_MR;integratedSecurity=true
+spring.datasource.url=jdbc:sqlserver://DBVEP42368:1433;databaseName=QLTY_RPT_MR;integratedSecurity=true
 #spring.datasource.username=dbuser
 #spring.datasource.password=dbpass
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
